--- a/modules/playground/src/animate/css/app.css
+++ b/modules/playground/src/animate/css/app.css
@@ -3,23 +3,13 @@ body {
 }
 
 .box {
-  width: 100px;
-  height: 100px;
-  background-color: red;
-  transition: all 0.35s ease-in-out;
-}
-.box.blue {
-  background-color: blue;
-}
-.box.ng-enter {
-  opacity: 0;
-  height: 0;
-}
-.box.ng-enter-active {
-  opacity: 1;
-  height: 100px;
-}
-.box.ng-leave-active {
-  opacity: 0;
-  height: 0;
+  width: 150px;
+  height: 150px;
+  background:yellow;
+  display:inline-block;
+  border:10px solid black;
+  margin:10px;
+  text-align:center;
+  line-height:150px;
+  font-size:100px;
 }
